# helloclub-api-guide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  authentication.md  endpoints.md  esp32-guide.md  gotchas.md  rate-limiting.md  v2-migration.md
docs/fields/: attendees.md  bookings.md  custom-fields.md  events.md  logs.md  members.md  memberships.md  transactions.md
examples/: fetch_attendees.py  fetch_events.py  fetch_members.py  field_discovery.py  manage_members.py  pagination.py  quickstart.py  rate_limit_handler.py
helloclub/: __init__.py  client.py  exceptions.py
scripts/: verify_fixes.py
tests/: conftest.py  helpers.py  test_client.py
