[project]
name = "helloclub-api-guide"
version = "0.1.0"
description = "Unofficial Hello Club API guide and lightweight Python client"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helloclub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
